<resources>
    <string name="app_name">SISP</string>
    <string name="sub_title">Suporte ao Patrimônio</string>
    <string name="action_settings">Configurações</string>
    <string name="error_conexao">Verifique sua conexão!</string>
    <string name="msg_aguarde">Aguarde ...</string>
    <string name="msg_error">Erro ao obter dados</string>
    <string name="title_submenu">Menu</string>
    <string name="action_exit">SAIR</string>
    <string name="nao_ha_dados">NÃO HÁ DADOS</string>
    <string name="nao_ha_ordem_servico">NÃO HÁ ORDEM SERVIÇO</string>
    <string name="label_configuracoes">Configurações</string>
    <string name="msg_sair_app">Sair da Aplicação?</string>
    <string name="label_numero_os">Número:</string>
    <string name="label_data_abertura">Abertura:</string>
    <string name="label_data_de_abertura">Data de Abertura:</string>
    <string name="label_data">00/00/0000</string>
    <string name="label_status">Status:</string>
    <string name="label_local">Local:</string>
    <string name="label_patrimonio">Patrimônio:</string>
    <string name="label_usuario">Usuário:</string>
    <string name="label_defeito">Defeito:</string>
    <string name="label_descricao_defeito">Descrição do Defeito</string>
    <string name="label_solucionada"> - Solucionada: %1$s</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="pesquisar_numero_data">Número e Data</string>
    <string name="search_hint">Pesquisar</string>
    <string name="desfazer">Desfazer</string>
    <string name="restaurar">Restaurar Padrão</string>
    <string name="recarregar">Recarregar</string>
    <string name="web_service">Web Service</string>
    <string name="msg_validade_form">Informe os campos abaixo</string>
    <string name="label_web_service">Web Service</string>
    <string name="label_url_web_service">URL raiz do Web Service</string>
    <string name="listando">Listando. Aguarde...</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_urls_edit">Web Service</string>
    <string name="title_activity_web_service_edit">Web Service</string>
    <string name="title_activity_web_service">Web Service</string>
    <string name="title_activity_notificacao_edit">Notificações</string>
    <string name="title_activity_ordem_servico_aberta">Ordens de Serviços Abertas</string>
    <string name="label_notificacao1_edit">Notificar Ordem de Serviço</string>
    <string name="label_notificacao2_edit">Verificar novas OS a cada</string>
    <string name="label_notificacao3_edit">%1$d min.</string>
    <string name="notificacao_switch_on">Sim</string>
    <string name="notificacao_switch_off">Não</string>
    <string name="label_header_config">Header</string>
    <string name="label_detail_config">Detalhe</string>
    <string name="label_editar">EDITAR</string>
    <string name="msg_restaurar_config">Restaurar configurações padrão?</string>

    <string name="label_ordens_servicos">Ordens de Serviços</string>

</resources>
