<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.daciosoftware.sispbr.configuracoes.NotificacaoEditActivity"
    tools:showIn="@layout/activity_notificacao_edit">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_notificacao1_edit"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView10"
        android:checked="false"
        android:clickable="true"
        android:textOff="@string/notificacao_switch_off"
        android:textOn="@string/notificacao_switch_on"
        android:theme="@style/Widget.AppCompat.CompoundButton.Switch" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switch1"
        android:layout_marginTop="26dp"
        android:text="@string/label_notificacao2_edit"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonIntervalo"
        style="@style/smallButton"
        android:layout_width="80dp"
        android:layout_alignEnd="@+id/switch1"
        android:layout_alignRight="@+id/switch1"
        android:layout_alignTop="@+id/textView8"
        android:background="@drawable/selector_button"
        android:text="@string/label_notificacao3_edit" />

</RelativeLayout>
